--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -14,6 +14,7 @@ $veryLightGray: hsl(228, 33%, 97%);
 $white: hsl(0, 0%, 100%);
 
 
-// padding / margin
+// padding / margin / border
  $paddingVal: 16px;
  $marginVal: 16px;
+ $borderRadius: 6px;
