--- a/style/main.scss
+++ b/style/main.scss
@@ -11,15 +11,22 @@
 
         &-inner{
             height: 100%;
-            margin-left: 16px;
+            margin-left: $marginVal;
+            @media only screen and (min-width: 768px){
+                margin-left: $marginVal*2;
+            }
         }
 
         &::before{
             content: '';
             display: inline-block;
-            width: 3px;
-            margin-bottom: 16px;
-            background-color: red;
+            width: 4px;
+            margin-bottom: $marginVal;
+            background-color: $lightGray;
+
+            @media only screen and (min-width: 768px){
+                margin-left: $marginVal*2;
+            }
         }
     }
 
@@ -36,6 +43,12 @@
         ;
         align-items: center;
         padding: $paddingVal;
+        @media only screen and (min-width: 768px){
+            grid-template-areas: 
+            "img textarea textarea textarea textarea button"
+            ;
+            align-items: flex-start;
+        }
 
         .textarea{
             grid-area: textarea;
@@ -48,6 +61,9 @@
         }
         .logged-user-img{
             grid-area: img;
+            @media only screen and (min-width: 768px){
+                justify-self: center;
+            }
         }
     }
 }
@@ -60,6 +76,11 @@
     background-color: $white;
     border-radius: $borderRadius;
 
+    @media only screen and (min-width: 768px){
+        position: relative;
+        align-items: flex-end;
+    }
+
     &__header,
     &__actions{
         display: flex;
@@ -68,6 +89,9 @@
     &__header{
         align-items: center;
         width: 100%;
+        @media only screen and (min-width: 768px){
+            width: 90%;
+        }
 
         .user{
             display: flex;
@@ -91,6 +115,9 @@
 
     &__content{
         margin: $marginVal 0;
+        @media only screen and (min-width: 768px){
+            width: 90%;
+        }
     }
 
     &__actions{
@@ -102,9 +129,18 @@
             justify-content: space-around;
             align-items: center;
             width: 80px;
-            height: 36px;
+            height: 40px;
             background-color: $veryLightGray;
             border-radius: $borderRadius;
+
+            @media only screen and (min-width: 768px){
+                position: absolute;
+                top: $paddingVal;
+                left: $paddingVal;
+                flex-direction: column;
+                width: 40px;
+                height: 80px;
+            }
 
             .score{
                 color: $moderateBlue;
@@ -128,6 +164,11 @@
             }
         }
         .btn-wrap{
+            @media only screen and (min-width: 768px){
+                position: absolute;
+                top: $paddingVal;
+                right: $paddingVal;
+            }
             .action{
                 margin: 0 ($marginVal/4);
                 font-weight: 500;
@@ -199,6 +240,9 @@
         justify-self: end;      
         background-color: $moderateBlue;
         font-size: 1.1rem;
+        @media only screen and (min-width: 768px){
+            justify-self: center;  
+        }
     }
 
     &__yes,
