--- a/style/main.scss
+++ b/style/main.scss
@@ -69,16 +69,18 @@
 }
 
 .comment{
-    display: flex;
-    flex-direction: column;
-    padding: $paddingVal;
-    margin-bottom: $marginVal;
-    background-color: $white;
-    border-radius: $borderRadius;
-
-    @media only screen and (min-width: 768px){
-        position: relative;
-        align-items: flex-end;
+    &__innerwrap{
+        display: flex;
+        flex-direction: column;
+        padding: $paddingVal;
+        margin-bottom: $marginVal;
+        background-color: $white;
+        border-radius: $borderRadius;
+    
+        @media only screen and (min-width: 768px){
+            position: relative;
+            align-items: flex-end;
+        }
     }
 
     &__header,
