--- a/style/_global.scss
+++ b/style/_global.scss
@@ -1,4 +1,3 @@
-@import '_variables';
 
 *{
     font-size: 16px;
@@ -12,7 +11,7 @@ body{
     padding: 2*$paddingVal $paddingVal;
     background-color: $veryLightGray;
 
-    &.open-modal{
+    &.active{
         overflow: hidden;
     }
 }
