--- a/style/main.scss
+++ b/style/main.scss
@@ -2,6 +2,7 @@
 @import '_global';
 @import '_commentsList';
 @import '_comment';
+@import '_usersList';
 
 .btn{
     height: 50px;
@@ -55,6 +56,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 90%;
+    max-width: 800px;
     padding: 16px;
     border-radius: $borderRadius;
     background-color: $white;
